Support attributes field